# vivid

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docs-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api_reference/app/: index.html
api_reference/http/SSG/: index.html
api_reference/http/SSR/: index.html
docs/: index.md
docs/api_reference/: app.md  http.md  router.md
docs/api_reference/http/: SSG.md  SSR.md
docs/guides/: basic.md
guides/basic/: index.html
search/: search_index.json
vivid/: __init__.py  __init__.pyi  __main__.py  app.py  http.py  router.py
vivid/utils/: cli.py  common.py  create_project.py  http.py  project_codes.py
