[tool.poetry]
name = "vivid"
version = "0.1.0"
description = "A toy webframework made by me for learning purpose."
authors = ["NaviTheCoderboi <102732282+NaviTheCoderboi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NaviTheCoderboi/vivid"
documentation = "https://github.com/NaviTheCoderboi/vivid"
homepage = "https://github.com/NaviTheCoderboi/vivid"
classifiers = [
    "Development Status :: 1 - Planning",
]

packages = [
    { include = "vivid" }
]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"